# todo_n

./: .env  package-lock.json  package.json
api/: Cargo.toml
api/src/: lib.rs  main.rs
api/src/database/: mod.rs  prelude.rs  todos.rs  users.rs
api/src/routes/: atomic_update.rs  create_todo.rs  delete.rs  get_todo.rs  guard.rs  mod.rs  partial_update.rs  users.rs
api/src/utils/: custom_error.rs  jwt.rs  mod.rs
app/: layout.tsx  page.tsx
app/[id]/: page.tsx
app/signin/: page.tsx
app/signup/: page.tsx
components/my_components/: CalenderMain.tsx  ProfileMain.tsx  TodoBox.tsx  TodoHeader.tsx  TodoItem.tsx  TodoMain.tsx
contexts/: TodoContext.tsx
utils/: utils.ts
